@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.18_01-dev
 
+issue with threads in perl_config.c [ Malcolm Beattie
+<mbeattie@sable.ox.ac.uk> / Koichi Nakatani <nakatani@konica.co.jp> ]
+
 fix bug in PerlPassEnv spotted by Gerd Knops, where values were munged  
 
 make sure per-dir PerlSetEnv happens after defaults are set (e.g. PATH)
